--- a/src/components/Profile/Bio/Bio.css
+++ b/src/components/Profile/Bio/Bio.css
@@ -28,23 +28,23 @@
     padding-bottom: 4.5em;
 }
 
-.prof-box {
-  padding-right: 0;
+.bio {
+  padding-top: 12%;
+}
+
+.profile-info {
+  margin-left: 10%;
+  display: block;
+  align-items: center;
 }
 
 .demo-box {
   right: 40px;
 }
 
-.profile-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+
 
 .profile-info {
-  border-color: black;
-  border-style: solid;
   align-content: center;
   width: 80vw;
   padding-top: 10px;
@@ -52,8 +52,12 @@
 }
 
 .profile-view {
-  padding-top: 37px;
+  margin-top: 13px;
+}
 
+.profile-well{
+  background-color: rgba(255, 255, 255, 0.7);
+  height: 200px;
 }
 
 .bio-box {
@@ -65,16 +69,25 @@
   font-size: 17px;
 }
 
+.bio-underline {
+  text-decoration: underline;
+}
 .bio-show {
+  background-color: rgba(255, 255, 255, 0.7);
+  margin-top: 14px;
   overflow: hidden scroll;
-
 }
 
 .biography-box {
+  margin-top: 10px;
   padding-top: 10px;
-  height: 210px;
-  width: 330px;
+  height: 114px;
+  width: 100%;
   overflow: scroll;
+}
+
+.demo-box {
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .saved-trips-edit-button {
