--- a/src/components/Profile/Bio/Bio.css
+++ b/src/components/Profile/Bio/Bio.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Josefin Slab';
 }
 .profile-pic {
-    background-image: url('https://s3-eu-west-1.amazonaws.com/lynks-blog/wp-content/uploads/2016/10/11153439/rsz_1shutterstock_325243652.jpg');
+    background-image: url('./vann.jpg');
     border-radius: 50%;
     height: 250px;
     width: 250px;
@@ -14,7 +14,9 @@ body {
     color: transparent;
     transition: all .3s ease;
     text-decoration: none;
-
+    border-style: solid;
+    border-width: thick;
+    border-color: black;
 }
 
 .edit-profile-container {
@@ -32,7 +34,7 @@ body {
 
 .cam-icon {
     display: inline-block;
-    padding-top: 4.5em;
+    padding-top: 8em;
     padding-bottom: 4.5em;
 }
 
@@ -43,7 +45,7 @@ body {
 
 
 .bio {
-  padding-top: 12%;
+  padding-top: 7.5%;
 }
 
 .profile-info {
@@ -62,14 +64,17 @@ body {
   align-content: center;
   height: 40em;
   width: 80vw;
-  padding-top: -10px;
   background-color: rgba(255, 255, 255);
 
 }
 
+.profile-location {
+  border-bottom: double;
+  border-width: thick;
+}
+
 .profile-view {
-  margin-top: 10px;
-  height: 22em;
+  height: 20em;
   display: flex;
   justify-content: center;
 }
@@ -81,6 +86,7 @@ body {
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
+  border-radius: 10px;
 }
 
 .button-profile {
@@ -95,16 +101,12 @@ border-style: none;
   height: 10%;
   width: 35em;
   text-align: center;
+
 }
 
 .trip-log-title {
   width: 40%;
   margin-bottom: 10px;
-}
-
-.demo-bio {
-  margin-top: 10px;
-  text-align: center;
 }
 
 .form-box-show {
@@ -129,6 +131,7 @@ border-style: none;
   overflow-y: scroll;
   text-align: center;
   background-color: white;
+  border-style: groove;
 }
 
 .demo-box {
