--- a/src/components/Profile/Bio/Bio.css
+++ b/src/components/Profile/Bio/Bio.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Josefin Slab';
 }
-.profile-pic {
+.profile-pic, .edit-profile-pic {
     background-image: url('./vann.jpg');
     border-radius: 50%;
     height: 250px;
@@ -17,6 +17,10 @@ body {
     border-style: solid;
     border-width: thick;
     border-color: black;
+}
+
+.edit-profile-pic {
+  background-image: none;
 }
 
 .edit-profile-container {
