finished aws pic upload. got pic posting to database. need to update state

--- a/src/components/Profile/Bio/Bio.css
+++ b/src/components/Profile/Bio/Bio.css
@@ -147,3 +147,8 @@ border-style: none;
 .button-profile {
   background-color: #F8F8F8;
 }
+
+.change-pic-form{
+  background-color: #fff;
+  padding: 10px;
+}
